force-app/main/default/objects/IntegratedExecute__c/IntegratedExecute__c.object-meta.xml
<CustomObject>
    <label>集成计划调用</label>
    <nameField>
        <displayFormat>IE{YYYY}{MM}{DD}{000000}</displayFormat>
        <label>集成计划调用编号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>