force-app/main/default/objects/IntegratedExecute__c/fields/AlertAdmin__c.field-meta.xml
<CustomField>
    <fullName>AlertAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>重试达标已发邮件通知</label>
    <type>Checkbox</type>
</CustomField>