force-app/main/default/objects/IntegratedExecute__c/fields/AssociatedTotal__c.field-meta.xml
<CustomField>
    <fullName>AssociatedTotal__c</fullName>
    <label>处理前关联记录次数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>