force-app/main/default/objects/IntegratedExecute__c/fields/BatchID__c.field-meta.xml
<CustomField>
    <fullName>BatchID__c</fullName>
    <label>批次ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>