force-app/main/default/objects/IntegratedExecute__c/fields/CalloutStatus__c.field-meta.xml
<CustomField>
    <fullName>CalloutStatus__c</fullName>
    <label>调用外部状态</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>成功</fullName>
            </value>
            <value>
                <fullName>失败</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>