force-app/main/default/objects/IntegratedExecute__c/fields/ExecutedCount__c.field-meta.xml
<CustomField>
    <fullName>ExecutedCount__c</fullName>
    <label>已执行次数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>