force-app/main/default/objects/IntegratedExecute__c/fields/ExecuteMethod__c.field-meta.xml
<CustomField>
    <fullName>ExecuteMethod__c</fullName>
    <label>执行方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>即时</fullName>
            </value>
            <value>
                <fullName>定时</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>