force-app/main/default/objects/IntegratedExecute__c/fields/IsNeedExecute__c.field-meta.xml
<CustomField>
    <fullName>IsNeedExecute__c</fullName>
    <formula>AND(NOW() &gt;= PlanExecuteTime__c, TEXT( Status__c )!= &apos;完成&apos;)</formula>
    <label>是否需要执行</label>
    <type>Checkbox</type>
</CustomField>