force-app/main/default/objects/IntegratedExecute__c/fields/ManualExecutedCount__c.field-meta.xml
<CustomField>
    <fullName>ManualExecutedCount__c</fullName>
    <label>手动执行测试</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>