force-app/main/default/objects/IntegratedExecute__c/fields/PlanExecuteCount__c.field-meta.xml
<CustomField>
    <fullName>PlanExecuteCount__c</fullName>
    <label>计划执行次数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>