force-app/main/default/objects/IntegratedExecute__c/fields/PlanExecutedLog__c.field-meta.xml
<CustomField>
    <fullName>PlanExecutedLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>计划执行日志</label>
    <referenceTo>IntegratedLog__c</referenceTo>
    <relationshipLabel>集成计划调用</relationshipLabel>
    <relationshipName>IntegratedExecuteFIntegratedLog</relationshipName>
    <type>Lookup</type>
</CustomField>