force-app/main/default/objects/IntegratedExecute__c/fields/PlanExecuteTime__c.field-meta.xml
<CustomField>
    <fullName>PlanExecuteTime__c</fullName>
    <label>计划执行时间</label>
    <type>DateTime</type>
</CustomField>