force-app/main/default/objects/IntegratedExecute__c/fields/RecordID__c.field-meta.xml
<CustomField>
    <fullName>RecordID__c</fullName>
    <label>记录ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>