force-app/main/default/objects/IntegratedExecute__c/fields/SendContent__c.field-meta.xml
<CustomField>
    <fullName>SendContent__c</fullName>
    <label>发送内容</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>