force-app/main/default/objects/IntegratedExecute__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>状态</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未处理</fullName>
            </value>
            <value>
                <fullName>执行中</fullName>
            </value>
            <value>
                <fullName>执行结束</fullName>
            </value>
            <value>
                <fullName>完成</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>