force-app/main/default/objects/IntegratedExecute__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>类型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>重试</fullName>
            </value>
            <value>
                <fullName>计划</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>